--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "exceljs": "^4.3.0",
+    "gpt3-tokenizer": "^1.1.5",
     "openai": "^4.2.0",
     "puppeteer": "^21.1.0",
     "reflect-metadata": "^0.1.13",
