--- a/package.json
+++ b/package.json
@@ -17,24 +17,35 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node ./node_modules/typeorm/cli",
+    "migrate:up": "npm run typeorm migration:run -- -d src/database/typeorm.ts",
+    "migrate:generate": "npm run typeorm -- -d src/database/typeorm.ts migration:generate ./src/migrations/-name",
+    "migrate": "npm run typeorm -- migration:create ./src/migrations/-name",
+    "migrate:down": "npm run typeorm -- -d src/database/typeorm.ts migration:revert"
+
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.8",
+    "@nestjs/typeorm": "^10.0.0",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "exceljs": "^4.3.0",
     "gpt3-tokenizer": "^1.1.5",
+    "mysql2": "^3.6.1",
     "openai": "^4.2.0",
+    "pg": "^8.11.3",
     "puppeteer": "^21.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.17",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
