--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "migrate:generate": "npm run typeorm -- -d src/database/typeorm.ts migration:generate ./src/migrations/-name",
     "migrate": "npm run typeorm -- migration:create ./src/migrations/-name",
     "migrate:down": "npm run typeorm -- -d src/database/typeorm.ts migration:revert"
-
   },
   "dependencies": {
+    "@gradientai/nodejs-sdk": "^1.11.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.0.0",
@@ -40,7 +40,7 @@
     "exceljs": "^4.3.0",
     "gpt3-tokenizer": "^1.1.5",
     "mysql2": "^3.6.1",
-    "openai": "^4.2.0",
+    "openai": "^4.47.1",
     "pg": "^8.11.3",
     "puppeteer": "^21.1.0",
     "reflect-metadata": "^0.1.13",
